[gd_scene load_steps=4 format=3 uid="uid://do02l08uk67mn"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_nvfm8"]
[ext_resource type="Texture2D" uid="uid://dvnbq5ap1ruov" path="res://icons/resetIcon.png" id="2_vt38w"]

[sub_resource type="Theme" id="Theme_kbfas"]
default_font_size = 32

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_kbfas")
script = ExtResource("1_nvfm8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.270588, 0.270588, 0.270588, 0.760784)

[node name="pause_menu" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GridContainer" type="GridContainer" parent="pause_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 554.5
offset_top = 223.0
offset_right = 685.5
offset_bottom = 457.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 10

[node name="Label" type="Label" parent="pause_menu/GridContainer"]
layout_mode = 2
text = "Pause"

[node name="ResumeButton" type="Button" parent="pause_menu/GridContainer"]
layout_mode = 2
text = "Resume
"

[node name="Debug" type="Button" parent="pause_menu/GridContainer"]
layout_mode = 2
text = "Debug
"

[node name="Quit" type="Button" parent="pause_menu/GridContainer"]
layout_mode = 2
text = "Quit"

[node name="debug_menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="debug_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -22.5
offset_right = 49.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="debug_menu/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Debug"

[node name="DebugBack" type="Button" parent="debug_menu/GridContainer"]
layout_mode = 2
text = "Back"

[node name="Skill" type="HBoxContainer" parent="debug_menu/GridContainer"]
layout_mode = 2

[node name="Jump" type="VBoxContainer" parent="debug_menu/GridContainer/Skill"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="debug_menu/GridContainer/Skill/Jump"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "Jump
"

[node name="JumpCheckButton" type="CheckButton" parent="debug_menu/GridContainer/Skill/Jump"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Dash" type="VBoxContainer" parent="debug_menu/GridContainer/Skill"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="debug_menu/GridContainer/Skill/Dash"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "Dash
"

[node name="DashCheckButton" type="CheckButton" parent="debug_menu/GridContainer/Skill/Dash"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Crouch" type="VBoxContainer" parent="debug_menu/GridContainer/Skill"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="debug_menu/GridContainer/Skill/Crouch"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "Crouch
"

[node name="CrouchCheckButton" type="CheckButton" parent="debug_menu/GridContainer/Skill/Crouch"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Speed" type="VBoxContainer" parent="debug_menu/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="debug_menu/GridContainer/Speed"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 15
text = "Speed
"

[node name="HBoxContainer" type="HBoxContainer" parent="debug_menu/GridContainer/Speed"]
layout_mode = 2

[node name="SpeedSlider" type="HSlider" parent="debug_menu/GridContainer/Speed/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 5.0
step = 0.1
value = 1.0

[node name="SpeedReset" type="Button" parent="debug_menu/GridContainer/Speed/HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_vt38w")

[connection signal="pressed" from="pause_menu/GridContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="pause_menu/GridContainer/Debug" to="." method="_on_debug_pressed"]
[connection signal="pressed" from="pause_menu/GridContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="debug_menu/GridContainer/DebugBack" to="." method="_on_debug_back_pressed"]
[connection signal="pressed" from="debug_menu/GridContainer/DebugBack" to="." method="_on_back_pressed"]
[connection signal="toggled" from="debug_menu/GridContainer/Skill/Jump/JumpCheckButton" to="." method="_on_jump_check_button_toggled"]
[connection signal="toggled" from="debug_menu/GridContainer/Skill/Dash/DashCheckButton" to="." method="_on_dash_check_button_toggled"]
[connection signal="toggled" from="debug_menu/GridContainer/Skill/Crouch/CrouchCheckButton" to="." method="_on_crouch_check_button_toggled"]
[connection signal="value_changed" from="debug_menu/GridContainer/Speed/HBoxContainer/SpeedSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="debug_menu/GridContainer/Speed/HBoxContainer/SpeedSlider" to="." method="_on_speed_slider_value_changed"]
[connection signal="pressed" from="debug_menu/GridContainer/Speed/HBoxContainer/SpeedReset" to="." method="_on_speed_reset_pressed"]
[connection signal="pressed" from="debug_menu/GridContainer/Speed/HBoxContainer/SpeedReset" to="." method="_on_reset_pressed"]
